--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-hello from root
+<html>
+  <body>
+    
+  <h1> My website </h1>
+  Hello from the index.html in the repository root
+    
+  </body>
+</html>
